--- a/charts/kubeadm/templates/KubeletConfiguration.yaml
+++ b/charts/kubeadm/templates/KubeletConfiguration.yaml
@@ -1,3 +1,4 @@
+# https://kubernetes.io/docs/reference/config-api/kubelet-config.v1beta1/
 apiVersion: kubelet.config.k8s.io/v1beta1
 kind: KubeletConfiguration
 metadata:
@@ -22,14 +23,15 @@ featureGates: {{ include "kubeadm.featuregates" ( dict "return" "map" "platform"
 podsPerCore: 20
 # cpuCFSQuotaPeriod: 10ms
 # Basic OS on Ubuntu 20.04 incl. crio
-#systemReserved:
-#  memory: 256Mi
-# This should be dynamic based on number of maxpods and available cores
-# https://cloud.google.com/kubernetes-engine/docs/concepts/cluster-architecture#memory_cpu
-# Below are default minimal for 2 cores and minimum kubelet 
+systemReserved:
+  memory: 256Mi
+  ephemeral-storage: "2Gi"
+# kubelet memory should be static as runc,conmon are added to each pod's cgroup
 kubeReserved:
   cpu: 70m
-#  memory: 128Mi
+  memory: 128Mi
 # Lets use below to reserve memory for system processes as kubeReserved/sytemReserved doesnt go well with systemd it seems
-evictionHard:
-  memory.available: "484Mi"
+#evictionHard:
+#  memory.available: "484Mi"
+imageGCLowThresholdPercent: 70
+kernelMemcgNotification: true
