fix: increase default memory limit to ingress envoy to 512MB, enable podDisruptionBudgets on demand

--- a/charts/kubezero-istio-ingress/values.yaml
+++ b/charts/kubezero-istio-ingress/values.yaml
@@ -23,10 +23,11 @@ istio-ingress:
       replicaCount: 1
       resources:
         requests:
+          cpu: 50m
           memory: 64Mi
         limits:
           # cpu: 100m
-          memory: 256Mi
+          memory: 512Mi
       externalTrafficPolicy: Local
       podAntiAffinityLabelSelector:
       - key: app
