--- a/charts/kubezero-istio-ingress/values.yaml
+++ b/charts/kubezero-istio-ingress/values.yaml
@@ -35,7 +35,9 @@ istio-ingress:
         topologyKey: kubernetes.io/hostname
         values: istio-ingressgateway
       type: NodePort
-
+      env:
+        TERMINATION_DRAIN_DURATION_SECONDS: '"60"'
+        # ISTIO_META_HTTP10: '"1"'
       # The node selector is normally the list of nodeports, see CloudBender
       nodeSelector:
         node.kubernetes.io/ingress.public: "30080_30443"
@@ -97,7 +99,9 @@ istio-private-ingress:
         topologyKey: kubernetes.io/hostname
         values: istio-private-ingressgateway
       type: NodePort
-
+      env:
+        TERMINATION_DRAIN_DURATION_SECONDS: '"60"'
+        # ISTIO_META_HTTP10: '"1"'
       nodeSelector:
         node.kubernetes.io/ingress.private: "31080_31443"
         #nodeSelector: "31080_31443_31671_31672_31224"
