feat: Map gemini controller to controller nodes, fix ebs storageclass, integrate timemachine into kubezero

--- a/charts/kubezero-timemachine/Chart.yaml
+++ b/charts/kubezero-timemachine/Chart.yaml
@@ -13,5 +13,5 @@ maintainers:
 dependencies:
   - name: gemini
     version: 0.0.6
-    repository: https://charts.fairwinds.com/stable
+    # repository: https://charts.fairwinds.com/stable
 kubeVersion: ">= 1.18.0"
