--- a/charts/kubezero/values.yaml
+++ b/charts/kubezero/values.yaml
@@ -23,6 +23,9 @@ kiam:
 aws-node-termination-handler:
   enabled: false
 
+timemachine:
+  enabled: false
+
 local-volume-provisioner:
   enabled: false
 
