--- a/charts/kubezero-aws-ebs-csi-driver/templates/snapshot-class.yaml
+++ b/charts/kubezero-aws-ebs-csi-driver/templates/snapshot-class.yaml
@@ -3,6 +3,8 @@ apiVersion: snapshot.storage.k8s.io/v1beta1
 kind: VolumeSnapshotClass
 metadata:
   name: csi-aws-vsc
+  annotations:
+    snapshot.storage.kubernetes.io/is-default-class: "true"
   labels:
 {{ include "kubezero-lib.labels" . | indent 4 }}
 driver: ebs.csi.aws.com
