--- a/charts/kubezero/values.yaml
+++ b/charts/kubezero/values.yaml
@@ -23,7 +23,7 @@ kiam:
 aws-node-termination-handler:
   enabled: false
 
-timemachine:
+timecapsule:
   enabled: false
 
 local-volume-provisioner:
