fix: add missing standard labels to custom Istio resources

--- a/charts/kubezero-istio-ingress/templates/bootstrap-config.yaml
+++ b/charts/kubezero-istio-ingress/templates/bootstrap-config.yaml
@@ -6,6 +6,8 @@ kind: ConfigMap
 metadata:
   name: istio-gateway-bootstrap-config
   namespace: {{ .Release.Namespace }}
+  labels:
+{{ include "kubezero-lib.labels" . | indent 4 }}
 data:
   custom_bootstrap.json: |
     {
