--- a/charts/kubezero-istio-ingress/templates/envoyfilter-keepalive-nlb.yaml
+++ b/charts/kubezero-istio-ingress/templates/envoyfilter-keepalive-nlb.yaml
@@ -4,6 +4,8 @@ kind: EnvoyFilter
 metadata:
   name: ingressgateway-listener-tcp-keepalive
   namespace: {{ .Release.Namespace }}
+  labels:
+{{ include "kubezero-lib.labels" . | indent 4 }}
 spec:
   configPatches:
   - applyTo: LISTENER
