--- a/charts/kubezero/templates/istio.yaml
+++ b/charts/kubezero/templates/istio.yaml
@@ -8,6 +8,9 @@ global:
 istio-discovery:
   pilot:
     replicaCount: 2
+
+  telemetry:
+    enabled: {{ .Values.metrics.enabled }}
 {{- end }}
 
 {{- end }}
