fix: adjust datasource and encoding of grafana dashboard tooling

--- a/charts/kubezero-metrics/templates/dashboard-gunzip-cm.yaml
+++ b/charts/kubezero-metrics/templates/dashboard-gunzip-cm.yaml
@@ -8,4 +8,4 @@ metadata:
 data:
   script.sh: |-
      #!/bin/sh
-     /bin/gunzip -k /tmp/dashboards/*/*.gz
+     /bin/gunzip -f -k /tmp/dashboards/*/*.gz
