fix: make kiam grafana dashboard optional

--- a/charts/kubezero-kiam/dashboards.yaml
+++ b/charts/kubezero-kiam/dashboards.yaml
@@ -1,4 +1,5 @@
 configmap: grafana-dashboards-kiam
+condition: '.Values.kiam.server.prometheus.servicemonitor.enabled'
 gzip: true
 folder: AWS
 dashboards:
