--- a/charts/kubezero-istio/values.yaml
+++ b/charts/kubezero-istio/values.yaml
@@ -37,3 +37,6 @@ istio-discovery:
   meshConfig:
     accessLogFile: /dev/stdout
     accessLogEncoding: 'JSON'
+    tcpKeepalive:
+      interval: 60s
+      time: 120s
