--- a/charts/kubezero-nats/Chart.yaml
+++ b/charts/kubezero-nats/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: kubezero-nats
 description: KubeZero umbrella chart for NATS
 type: application
-version: 0.1.0
+version: 0.1.1
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
@@ -11,6 +11,9 @@ keywords:
 maintainers:
   - name: Quarky9
 dependencies:
+  - name: kubezero-lib
+    version: ">= 0.1.3"
+    repository: https://zero-down-time.github.io/kubezero/
   - name: nats
     version: 0.8.3
     #repository: https://nats-io.github.io/k8s/helm/charts/
