feat: add mysql dashboard to kubezero-sql

--- a/charts/kubezero-sql/example-mariadb-galera.yaml
+++ b/charts/kubezero-sql/example-mariadb-galera.yaml
@@ -14,6 +14,7 @@ spec:
         mariadb-galera:
           enabled: true
           metrics:
+            enabled: true
             serviceMonitor:
               enabled: true
 
