feat: add istio support to mariadb-galera

--- a/charts/kubezero-sql/example-mariadb-galera.yaml
+++ b/charts/kubezero-sql/example-mariadb-galera.yaml
@@ -17,6 +17,9 @@ spec:
             enabled: true
             serviceMonitor:
               enabled: true
+          istio:
+            enabled: true
+            url: mariadb.dev.mayneinc.com
 
   destination:
     server: 'https://kubernetes.default.svc'
