--- a/charts/kubezero/templates/logging.yaml
+++ b/charts/kubezero/templates/logging.yaml
@@ -103,6 +103,7 @@ fluent-bit:
     - /webhooks/6/clientConfig/caBundle
     - /webhooks/7/clientConfig/caBundle
     - /webhooks/8/clientConfig/caBundle
+    - /webhooks/9/clientConfig/caBundle
   - group: apiextensions.k8s.io
     kind: CustomResourceDefinition
     jsonPointers:
